fix swing sample for mac when use java 17